--- a/yes.html
+++ b/yes.html
@@ -2,33 +2,97 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Valentine 💕</title>
+  <title>Valentine 💘</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
-    body {
-      margin: 0;
-      padding: 30px;
-      min-height: 100vh;
-      background: linear-gradient(135deg, #ff5f9e, #ff8fab);
-      color: white;
+    * {
+      box-sizing: border-box;
       font-family: Arial, sans-serif;
-      overflow-x: hidden;
     }
 
-    .card {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 30px;
-      border-radius: 25px;
-      max-width: 700px;
-      margin: auto;
-      line-height: 1.6;
-      font-size: clamp(16px, 3vw, 20px);
+    body {
+      margin: 0;
+      height: 100vh;
+      overflow: hidden;
+      background: linear-gradient(135deg, #ff5f9e, #ff8fab);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
     }
 
     h1 {
-      text-align: center;
+      color: white;
+      font-size: clamp(24px, 5vw, 40px);
+      margin-bottom: 10px;
+      z-index: 2;
+    }
+
+    #countdown {
+      color: white;
+      font-size: 16px;
+      margin-bottom: 30px;
+      opacity: 0.9;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+      max-width: 350px;
+      height: 250px;
+      z-index: 2;
+    }
+
+    button {
+      padding: 14px 28px;
+      font-size: 18px;
+      border-radius: 30px;
+      border: none;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #yes {
+      background: white;
+      color: #ff4d8d;
       margin-bottom: 20px;
+    }
+
+    #no {
+      position: absolute;
+      background: #ff2f6d;
+      color: white;
+    }
+
+    /* Heart burst */
+    .burst-heart {
+      position: absolute;
+      color: #ff4d8d;
+      font-size: 14px;
+      animation: burst 1s ease-out forwards;
+      pointer-events: none;
+    }
+
+    @keyframes burst {
+      0% { transform: scale(0) translateY(0); opacity: 1; }
+      100% { transform: scale(1.5) translateY(-40px); opacity: 0; }
+    }
+
+    .popup {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: white;
+      color: #ff2f6d;
+      padding: 16px 22px;
+      border-radius: 20px;
+      font-size: 16px;
+      display: none;
+      z-index: 3;
+      max-width: 90%;
     }
 
     .heart {
@@ -38,45 +102,98 @@
     }
 
     @keyframes float {
-      0% {
-        transform: translateY(100vh);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-10vh);
-        opacity: 0;
-      }
+      0% { transform: translateY(100vh); opacity: 1; }
+      100% { transform: translateY(-10vh); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <h1>💘 My Valentine 💘</h1>
+  <div>
+    <h1>Will you be my Valentine Coco? &lt;3</h1>
+    <div id="countdown"></div>
 
-    <p>
-      Thank you for accepting me to be your valentine again this year!
-      Although I am your fiancé, I will continue to ask you to be mine on
-      the special day for eternity!
-    </p>
-
-    <p>
-      Since you clicked Yes, we will be doing a staycation this year since
-      it has been forever and a day since we have done one.
-      We will be getting dinner at Mesume at 9 pm.
-      (I know we have already been there but there is like 0 reservations
-      anywhere else).
-    </p>
-
-    <p>
-      I love you forever Coco.<br><br>
-      Sincerely,<br>
-      Your Fiancé<br>
-      <strong>Terry Sajan</strong>
-    </p>
+    <div class="container">
+      <button id="yes">Yes 💖</button>
+      <button id="no">No</button>
+    </div>
   </div>
 
+  <div class="popup" id="popup">
+    You thought no was an option? You're stuck with me bby.
+  </div>
+
+  <audio id="bgMusic" src="E85.mp3"></audio>
+
   <script>
+    const noBtn = document.getElementById("no");
+    const yesBtn = document.getElementById("yes");
+    const container = document.querySelector(".container");
+    const popup = document.getElementById("popup");
+    const music = document.getElementById("bgMusic");
+    const countdownEl = document.getElementById("countdown");
+
+    let scale = 1;
+    let startTime = null;
+    let popupShown = false;
+    let musicStarted = false;
+
+    function startMusic() {
+      if (!musicStarted) {
+        music.play().catch(() => {});
+        musicStarted = true;
+      }
+    }
+
+    // No button escape + shrink + popup
+    function moveNo() {
+      startMusic();
+
+      if (!startTime) startTime = Date.now();
+      const elapsed = (Date.now() - startTime) / 1000;
+
+      if (elapsed >= 5 && !popupShown) {
+        popupShown = true;
+        popup.style.display = "block";
+        setTimeout(() => popup.style.display = "none", 5000);
+      }
+
+      scale = Math.max(0.4, scale - 0.05);
+      noBtn.style.transform = `scale(${scale})`;
+
+      const maxX = container.clientWidth - noBtn.offsetWidth;
+      const maxY = container.clientHeight - noBtn.offsetHeight;
+
+      noBtn.style.left = Math.random() * maxX + "px";
+      noBtn.style.top = Math.random() * maxY + "px";
+    }
+
+    noBtn.addEventListener("mouseenter", moveNo);
+    noBtn.addEventListener("touchstart", moveNo);
+
+    // Yes button click → go to yes.html
+    yesBtn.addEventListener("click", () => {
+      startMusic();
+      window.location.href = "yes.html";
+    });
+
+    // Heart burst on hover/tap
+    function heartBurst(e) {
+      for (let i = 0; i < 6; i++) {
+        const heart = document.createElement("div");
+        heart.className = "burst-heart";
+        heart.innerHTML = "💖";
+        heart.style.left = e.offsetX + "px";
+        heart.style.top = e.offsetY + "px";
+        e.target.appendChild(heart);
+        setTimeout(() => heart.remove(), 1000);
+      }
+    }
+
+    yesBtn.addEventListener("mouseenter", heartBurst);
+    yesBtn.addEventListener("touchstart", heartBurst);
+
+    // Floating background hearts
     function createHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
@@ -84,12 +201,25 @@
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.fontSize = 16 + Math.random() * 24 + "px";
       document.body.appendChild(heart);
-
       setTimeout(() => heart.remove(), 12000);
     }
+    setInterval(createHeart, 300);
 
-    setInterval(createHeart, 400);
+    // Countdown to Valentine's Day
+    function updateCountdown() {
+      const now = new Date();
+      const year = now.getMonth() > 1 ? now.getFullYear() + 1 : now.getFullYear();
+      const valentines = new Date(year, 1, 14);
+      const diff = valentines - now;
+
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
+      const mins = Math.floor((diff / (1000 * 60)) % 60);
+
+      countdownEl.textContent = `💌 Valentine’s Day in ${days}d ${hours}h ${mins}m`;
+    }
+    setInterval(updateCountdown, 1000);
+    updateCountdown();
   </script>
-
 </body>
 </html>
