--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
+    * { box-sizing: border-box; font-family: Arial, sans-serif; }
     body {
       margin: 0;
       height: 100vh;
@@ -25,15 +21,8 @@
     h1 {
       color: white;
       font-size: clamp(24px, 5vw, 40px);
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       z-index: 2;
-    }
-
-    #countdown {
-      color: white;
-      font-size: 16px;
-      margin-bottom: 30px;
-      opacity: 0.9;
     }
 
     .container {
@@ -54,17 +43,8 @@
       overflow: hidden;
     }
 
-    #yes {
-      background: white;
-      color: #ff4d8d;
-      margin-bottom: 20px;
-    }
-
-    #no {
-      position: absolute;
-      background: #ff2f6d;
-      color: white;
-    }
+    #yes { background: white; color: #ff4d8d; margin-bottom: 20px; }
+    #no { position: absolute; background: #ff2f6d; color: white; }
 
     /* Heart burst on hover */
     .burst-heart {
@@ -74,26 +54,9 @@
       animation: burst 1s ease-out forwards;
       pointer-events: none;
     }
-
     @keyframes burst {
       0% { transform: scale(0) translateY(0); opacity: 1; }
       100% { transform: scale(1.5) translateY(-40px); opacity: 0; }
-    }
-
-    /* Popup */
-    .popup {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: white;
-      color: #ff2f6d;
-      padding: 16px 22px;
-      border-radius: 20px;
-      font-size: 16px;
-      display: none;
-      z-index: 3;
-      max-width: 90%;
     }
 
     /* Floating hearts */
@@ -101,28 +64,23 @@
       position: absolute;
       color: rgba(255, 255, 255, 0.8);
       animation: float 10s linear infinite;
+      user-select: none;
     }
-
     @keyframes float {
       0% { transform: translateY(100vh); opacity: 1; }
       100% { transform: translateY(-10vh); opacity: 0; }
     }
+
   </style>
 </head>
 <body>
 
   <div>
     <h1>Will you be my Valentine Coco? &lt;3</h1>
-    <div id="countdown"></div>
-
     <div class="container">
       <button id="yes">Yes 💖</button>
       <button id="no">No</button>
     </div>
-  </div>
-
-  <div class="popup" id="popup">
-    You thought no was an option? You're stuck with me bby.
   </div>
 
   <audio id="bgMusic" src="E85.mp3"></audio>
@@ -131,35 +89,12 @@
     const noBtn = document.getElementById("no");
     const yesBtn = document.getElementById("yes");
     const container = document.querySelector(".container");
-    const popup = document.getElementById("popup");
     const music = document.getElementById("bgMusic");
-    const countdownEl = document.getElementById("countdown");
 
     let scale = 1;
-    let startTime = null;
-    let popupShown = false;
-    let musicStarted = false;
 
-    function startMusic() {
-      if (!musicStarted) {
-        music.play().catch(() => {});
-        musicStarted = true;
-      }
-    }
-
-    // No button escape + shrink + popup
+    // No button moves around
     function moveNo() {
-      startMusic();
-
-      if (!startTime) startTime = Date.now();
-      const elapsed = (Date.now() - startTime) / 1000;
-
-      if (elapsed >= 5 && !popupShown) {
-        popupShown = true;
-        popup.style.display = "block";
-        setTimeout(() => popup.style.display = "none", 5000);
-      }
-
       scale = Math.max(0.4, scale - 0.05);
       noBtn.style.transform = `scale(${scale})`;
 
@@ -169,17 +104,16 @@
       noBtn.style.left = Math.random() * maxX + "px";
       noBtn.style.top = Math.random() * maxY + "px";
     }
-
     noBtn.addEventListener("mouseenter", moveNo);
     noBtn.addEventListener("touchstart", moveNo);
 
-    // Yes button click → go to yes.html
+    // Yes button click → start music and navigate
     yesBtn.addEventListener("click", () => {
-      startMusic();
-      window.location.href = "yes.html";
+      music.play().catch(() => {});
+      window.location.href = "./yes.html";
     });
 
-    // Heart burst on hover/tap
+    // Heart bursts on Yes hover/tap
     function heartBurst(e) {
       for (let i = 0; i < 6; i++) {
         const heart = document.createElement("div");
@@ -191,7 +125,6 @@
         setTimeout(() => heart.remove(), 1000);
       }
     }
-
     yesBtn.addEventListener("mouseenter", heartBurst);
     yesBtn.addEventListener("touchstart", heartBurst);
 
@@ -207,21 +140,6 @@
     }
     setInterval(createHeart, 300);
 
-    // Countdown to Valentine's Day
-    function updateCountdown() {
-      const now = new Date();
-      const year = now.getMonth() > 1 ? now.getFullYear() + 1 : now.getFullYear();
-      const valentines = new Date(year, 1, 14);
-      const diff = valentines - now;
-
-      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
-      const mins = Math.floor((diff / (1000 * 60)) % 60);
-
-      countdownEl.textContent = `💌 Valentine’s Day in ${days}d ${hours}h ${mins}m`;
-    }
-    setInterval(updateCountdown, 1000);
-    updateCountdown();
   </script>
 </body>
 </html>
