--- a/yes.html
+++ b/yes.html
@@ -52,8 +52,9 @@
 
   <div class="message-container">
     <h1>Thank you for accepting me to be your Valentine again this year! 💖</h1>
-    <p>Although I am your fiancé, I will continue to ask you to be mine on the special day for eternity!</p>
-    <p>Since you clicked Yes, we will be doing a staycation this year since it has been forever and a day since we have done one. We will be getting dinner at Mesume at 9 pm. (I know we have already been there but there is like 0 reservations anywhere else).</p>
+    <p>Although I am your fiancé, I will continue to ask you to be mine on this special day for eternity!</p>
+    <p>Since you clicked Yes, we will be doing a staycation this year since it has been forever and a day since we have done one. We will be getting dinner at Mesume at 9 pm. (I know we have already been there).</p>
+    <p>Thank you for always being my girl, and sticking with me through thick or thin.</p>
     <p>I love you forever Coco.</p>
     <p><strong>Sincerely, Your Fiancé<br>Terry Sajan</strong></p>
   </div>
