--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
     h1 {
       color: white;
       font-size: clamp(24px, 5vw, 40px);
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       z-index: 2;
+    }
+
+    #countdown {
+      color: white;
+      font-size: 16px;
+      margin-bottom: 30px;
+      opacity: 0.9;
     }
 
     .container {
@@ -59,6 +66,22 @@
       100% { transform: scale(1.5) translateY(-40px); opacity: 0; }
     }
 
+    /* Popup */
+    .popup {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: white;
+      color: #ff2f6d;
+      padding: 16px 22px;
+      border-radius: 20px;
+      font-size: 16px;
+      display: none;
+      z-index: 3;
+      max-width: 90%;
+    }
+
     /* Floating hearts */
     .heart {
       position: absolute;
@@ -70,17 +93,22 @@
       0% { transform: translateY(100vh); opacity: 1; }
       100% { transform: translateY(-10vh); opacity: 0; }
     }
-
   </style>
 </head>
 <body>
 
   <div>
     <h1>Will you be my Valentine Coco? &lt;3</h1>
+    <div id="countdown"></div>
+
     <div class="container">
       <button id="yes">Yes 💖</button>
       <button id="no">No</button>
     </div>
+  </div>
+
+  <div class="popup" id="popup">
+    You thought no was an option? You're stuck with me bby.
   </div>
 
   <audio id="bgMusic" src="E85.mp3"></audio>
@@ -89,12 +117,41 @@
     const noBtn = document.getElementById("no");
     const yesBtn = document.getElementById("yes");
     const container = document.querySelector(".container");
+    const popup = document.getElementById("popup");
     const music = document.getElementById("bgMusic");
+    const countdownEl = document.getElementById("countdown");
 
     let scale = 1;
+    let startTime = null;
+    let popupShown = false;
 
-    // No button moves around
+    // Countdown to Valentine’s Day
+    function updateCountdown() {
+      const now = new Date();
+      const year = now.getMonth() > 1 ? now.getFullYear() + 1 : now.getFullYear();
+      const valentines = new Date(year, 1, 14);
+      const diff = valentines - now;
+
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
+      const mins = Math.floor((diff / (1000 * 60)) % 60);
+
+      countdownEl.textContent = `💌 Valentine’s Day in ${days}d ${hours}h ${mins}m`;
+    }
+    setInterval(updateCountdown, 1000);
+    updateCountdown();
+
+    // No button move + shrink + popup
     function moveNo() {
+      if (!startTime) startTime = Date.now();
+      const elapsed = (Date.now() - startTime) / 1000;
+
+      if (elapsed >= 5 && !popupShown) {
+        popupShown = true;
+        popup.style.display = "block";
+        setTimeout(() => popup.style.display = "none", 5000);
+      }
+
       scale = Math.max(0.4, scale - 0.05);
       noBtn.style.transform = `scale(${scale})`;
 
@@ -107,13 +164,13 @@
     noBtn.addEventListener("mouseenter", moveNo);
     noBtn.addEventListener("touchstart", moveNo);
 
-    // Yes button click → start music and navigate
+    // Yes button click → start music + navigate
     yesBtn.addEventListener("click", () => {
       music.play().catch(() => {});
       window.location.href = "./yes.html";
     });
 
-    // Heart bursts on Yes hover/tap
+    // Heart burst on hover/tap for Yes
     function heartBurst(e) {
       for (let i = 0; i < 6; i++) {
         const heart = document.createElement("div");
